Fix: prevent homepage image from getting misaligned with text

--- a/src/app/page-home/page-home.component.scss
+++ b/src/app/page-home/page-home.component.scss
@@ -24,7 +24,9 @@
 	}
 
 	@media ($xlg) {
-		min-height: 100vh;
+		min-height: auto;
+		height: 100vh;
+		max-height: rem(1000);
 	}
 }
 
